--- a/pom.xml
+++ b/pom.xml
@@ -45,64 +45,78 @@
 			<groupId>net.coobird</groupId>
 			<artifactId>thumbnailator</artifactId>
 			<version>0.4.14</version>
+			<!-- Simple and fluent API for image resizing and thumbnail generation -->
 		</dependency>
+		<!-- Apache PDFBox for reading and processing PDF files -->
 		<dependency>
 			<groupId>org.apache.pdfbox</groupId>
 			<artifactId>pdfbox</artifactId>
 			<version>2.0.30</version>
+			<!-- Used for extracting images or text from PDFs, generating PDF thumbnails -->
 		</dependency>
-
+		<!-- Apache POI for reading/writing Excel (XLS, XLSX) files -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>5.2.3</version>
+			<!-- Required for handling legacy Excel formats (XLS) -->
 		</dependency>
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi-ooxml</artifactId>
 			<version>5.2.3</version>
+			<!-- Required for handling modern Excel formats (XLSX) -->
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
 			<version>3.5.0</version>
 		</dependency>
+		<!-- Spring Boot cache starter for enabling caching annotations -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-cache</artifactId>
+			<!-- Required for using @Cacheable, @CachePut, and cache abstraction -->
 		</dependency>
+		<!-- OpenCSV for reading/writing CSV files -->
 		<dependency>
 			<groupId>com.opencsv</groupId>
 			<artifactId>opencsv</artifactId>
 			<version>5.7.1</version>
+			<!-- Useful for exporting/importing CSV reports or data -->
 		</dependency>
+		<!-- Caffeine: high-performance Java caching library -->
 		<dependency>
 			<groupId>com.github.ben-manes.caffeine</groupId>
 			<artifactId>caffeine</artifactId>
-			<version>3.1.8</version> <!-- or latest version -->
+			<version>3.1.8</version>
+			<!-- Provides in-memory cache; integrates well with Spring's cache abstraction -->
 		</dependency>
+		<!-- TwelveMonkeys ImageIO plugins to support more image formats -->
 		<dependency>
 			<groupId>com.twelvemonkeys.imageio</groupId>
 			<artifactId>imageio-jpeg</artifactId>
 			<version>3.9.4</version>
+			<!-- Enhanced JPEG support for Java ImageIO (metadata, corrupt files, etc.) -->
 		</dependency>
 		<dependency>
 			<groupId>com.twelvemonkeys.imageio</groupId>
 			<artifactId>imageio-tiff</artifactId>
 			<version>3.9.4</version>
+			<!-- Adds support for TIFF images in ImageIO -->
 		</dependency>
 		<dependency>
 			<groupId>com.twelvemonkeys.imageio</groupId>
 			<artifactId>imageio-bmp</artifactId>
 			<version>3.9.4</version>
+			<!-- Adds support for BMP images in ImageIO -->
 		</dependency>
-
 		<!-- Apache Tika for MIME type detection -->
 		<dependency>
 			<groupId>org.apache.tika</groupId>
 			<artifactId>tika-core</artifactId>
 			<version>2.9.1</version>
+			<!-- Automatically detects content type of files (image, PDF, Excel, etc.) -->
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
