--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,17 @@
 			<version>2.0.30</version>
 			<!-- Used for extracting images or text from PDFs, generating PDF thumbnails -->
 		</dependency>
+		<!-- For DOC -->
+		<dependency>
+			<groupId>org.apache.poi</groupId>
+			<artifactId>poi-scratchpad</artifactId>
+			<version>5.2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.opensagres.xdocreport</groupId>
+			<artifactId>fr.opensagres.poi.xwpf.converter.pdf</artifactId>
+			<version>2.0.4</version>
+		</dependency>
 		<!-- Apache POI for reading/writing Excel (XLS, XLSX) files -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
